# DL_adv

./: .gitignore  DL_adv.ipynb  README.md  banana_experiment.py  banana_experiment.py.lprof  deep_learning.yaml  jax imp.ipynb  manifold.py  manifold_kfac.py  manifoldwouter.py  neural_network.py  plots.py  pyproject.toml  run_banana_experiments.sh  script_generator.py
JAX-RIEM-LA/: README.md  banana_results.csv  script_generator.py
JAX-RIEM-LA/manifold/: geometry_diffrax.py  manifold.py
JAX-RIEM-LA/solvers_comparison/: README.md  banana_experiment.py  banana_experiment_solvers_comparison.py  comparison_fastest_pcoeff_icoeff.csv  script_generator.py  solvers_comparison(10seeds).csv  solvers_comparison(4seeds).csv
admin/: roadmap.md
geomai/utils/: geometry.py  geometry_diffrax.py
jax_version/: banana_experiment.py  banana_experiment.py.lprof  manifold.py
jax_version/utils/: inverse.py  metrics.py
manifold/: geometry.py  geometry_diffrax.py  manifold.py  manifold_kfac.py
optimized_python/: banana_experiment.py  functorch_utils.py  manifold.py
optimized_python/utils/: inverse.py  metrics.py
riemannian-laplace-approximation/: README.md  banana_experiment.py  banana_results_original.csv  geomai.yml  manifold.py  manifold_kfac.py  regression_experiment.py  run_banana_experiments_orig.sh  script_generator_orig.py
riemannian-laplace-approximation/utils/: metrics.py
solvers_comparison/: README.md  comparison_stepsizecontroller.csv  deep_learning.yaml  run_banana_experiments.sh
utils/: data_loading.py  evaluation.py  metrics.py  neural_network.py
(+8 files in other folders)
