[project]
name = "dl-adv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "laplace-torch>=0.2.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchdiffeq>=0.2.4",
    "tqdm>=4.67.0",
]
