[project]
name = "dl-adv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.6.0",
    "flax>=0.10.1",
    "jax>=0.4.35",
    "laplace-torch>=0.2.1",
    "matplotlib==3.9.2",
    "optax>=0.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
    "torch2jax>=0.0.1",
    "torch>=2.5.1",
]
